Ответ по валютам приведен к стандарту
